# Automatic_Irrigation_System

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
App/: CMakeLists.txt
App/inc/: APP_display.h  APP_irrigation.h  APP_monitoring.h  APP_nodered.h  main.h
App/src/: APP_display.c  APP_irrigation.c  APP_monitoring.c  APP_nodered.c  main.c
Peripherals/usr_adc/: CMakeLists.txt  usr_adc.c  usr_adc.h
Peripherals/usr_gpio/: CMakeLists.txt  usr_gpio.c  usr_gpio.h
Peripherals/usr_i2c/: CMakeLists.txt  usr_i2c.c  usr_i2c.h
Peripherals/usr_mqtt/: CMakeLists.txt  usr_mqtt.c  usr_mqtt.h
Peripherals/usr_pcnt/: CMakeLists.txt  usr_pcnt.c  usr_pcnt.h
Peripherals/usr_timer/: CMakeLists.txt  usr_timer.c  usr_timer.h
User_HAL/HAL_OLED_display/: CMakeLists.txt  HAL_display.c  HAL_display.h
User_HAL/HAL_OLED_display/font/: font.h
User_HAL/HAL_OLED_display/images/: images.c
User_HAL/HAL_ech2o_ec5/: CMakeLists.txt  HAL_ech2o_ec5.c  HAL_ech2o_ec5.h
User_HAL/HAL_flow_sensor/: CMakeLists.txt  HAL_flow_sensor.c
User_HAL/HAL_solenoid_valve/: CMakeLists.txt  HAL_solenoid_valve.c  HAL_solenoid_valve.h
User_HAL/OLED_display/: CMakeLists.txt  hal_display.c  hal_display.h
User_HAL/OLED_display/font/: font.c
User_HAL/OLED_display/images/: images.c  images.h
User_HAL/ech20_ec5/: CMakeLists.txt  ech20_ec5.c  ech20_ec5.h
User_HAL/ech2o_ec5/: CMakeLists.txt  ech2o_ec5.c  ech2o_ec5.h
User_HAL/flow_sensor/: CMakeLists.txt  flow_sensor.c  flow_sensor.h
User_HAL/solenoid_valve/: CMakeLists.txt  solenoid_valve.c  solenoid_valve.h
main/: main.c
